--- a/README.textile
+++ b/README.textile
@@ -1,24 +1,28 @@
-﻿h1. README
-
-*EPBT(SAP Enterprise Portal Behavior Testing)* - SAP Enterprise Portal Behavior Testing
+﻿h1. *EPBT(SAP Enterprise Portal Behavior Testing)* - SAP Enterprise Portal Behavior Testing
 
 p. %{color:#058}_Portal behavior testing and automated non-regression testing for building, extending and maintaining long-term SAP Portal applications_%
 
 h2. Overview
+
+h3. Features
 
 * Behavior testing environment aimed to SAP EP(Enterprise Portal)
 * One-click non regression testing of SAP web applications
 * Support for: Web DynPro/Java (atm)
 * Can be used to support "BDD(Behavior Driven Development)":http://en.wikipedia.org/wiki/Behavior_Driven_Development (Behavior Driven Development)
 
+h3. Status
+
+EPBT development status is currently "Pre-Alpha":http://en.wikipedia.org/wiki/Software_release_life_cycle#Pre-Alpha.
+
 h2. Running tests
 
-bq. run_all_features.bat
+bq. autorun-report.bat
 
 h2. License
 
-* EPBT is licensed under the original MIT license.
-* SAP EP(Enterprise Portal) is copyrighted SAP AG. All Rights Reserved.
+* EPBT is licensed under the original "MIT license":http://creativecommons.org/licenses/MIT/.
+* SAP EP(Enterprise Portal) is copyrighted "SAP AG":http://www.sap.com/. All Rights Reserved.
 
 h2. Contributors
 
