--- a/README.textile
+++ b/README.textile
@@ -15,11 +15,11 @@ h3. Features
 
 h3. Status
 
-EPBT(SAP Enterprise Portal Behavior Testing) development status is currently "Pre-Alpha":http://en.wikipedia.org/wiki/Software_release_life_cycle#Pre-Alpha.
+EPBT(SAP Enterprise Portal Behavior Testing) development status is currently "Pre-Alpha":http://en.wikipedia.org/wiki/Software_release_life_cycle#Pre-Alpha and its latest version is "0.0.3":http://github.com/arnaud/EPBT/downloads.
 
 h3. Installation
 
-If running Windows, you can install EPBT with "*+EPBT one click installer+*":http://cloud.github.com/downloads/arnaud/EPBT/EPBT-setup-0.0.2.exe.
+If running Windows, you can install EPBT with "*+EPBT one click installer+*":http://cloud.github.com/downloads/arnaud/EPBT/EPBT-setup-0.0.3.exe.
 It's an offline, self-contained, fully-featured installation executable.
 
 For more information about the installation, see the github "Installation":http://github.com/arnaud/EPBT/wikis/installation wiki page.
