--- a/totori/README.textile
+++ b/totori/README.textile
@@ -1,4 +1,4 @@
 h1. *Totori submodules*
 
-* "Totori workbench":http://totori.org/-workbench
-* "Totori server":http://totori.org/-server
+* "Totori workbench":http://github.com/totori/totori-workbench
+* "Totori server":http://github.com/totori/totori-server
